--- a/templates/authapp/login.html
+++ b/templates/authapp/login.html
@@ -194,7 +194,7 @@
                     <input type="password" class="border-input" name="password" id="password" placeholder="Contraseña"/>
                 </div>
                 <div class="form-group form-button">
-                <input type="hidden" name="next" value="{{ request.GET.next }}">
+                <input type="hidden" name="next" value="{{ request.GET.next|default:'' }}">
                 <input type="submit" name="signin" id="signin" class="form-submit" value="Entrar">
                 </div>
             </form>
