--- a/templates/forms_requests/admin/request_form_admin.html
+++ b/templates/forms_requests/admin/request_form_admin.html
@@ -151,11 +151,13 @@
             <p class="mb-1"><strong>Fecha:</strong> <span id="det-fecha"></span></p>
             <p class="mb-1"><strong>Días laborales:</strong> <span id="det-dias"></span></p>
             <p class="mb-1"><strong>Horario:</strong> <span id="det-horario"></span></p>
+            <p class="mb-1"><strong>Reg. Patronal:</strong> <span id="det-registro"></span></p>
           </div>
           <div class="col-md-6">
             <p class="mb-1"><strong>Guardería:</strong> <span id="det-guarderia"></span></p>
             <p class="mb-1"><strong>Dirección:</strong> <span id="det-direccion"></span></p>
             <p class="mb-1"><strong>Menor:</strong> <span id="det-menor"></span></p>
+            <p class="mb-1"><strong>Vacaciones:</strong> <span id="det-vacaciones"></span></p>
             <p class="mb-1"><strong>Estado:</strong> <span id="det-estado" class="badge"></span></p>
           </div>
         </div>
