--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -89,7 +89,9 @@
 
 <body style="font-family: 'Encode Sans Condensed', sans-serif; font-weight: 500;">
 	<div class="wrapper">
-		{% include 'layouts/sidebar.html' %}
+		<nav id="sidebar">
+			{% include 'layouts/sidebar.html' %}
+		</nav>
 
 		<div class="main">
 			{% include 'layouts/navbar.html' %}
