--- a/templates/layouts/sidebar.html
+++ b/templates/layouts/sidebar.html
@@ -5,7 +5,7 @@
 {% endblock %} 
 
 <nav id="sidebar" class="sidebar js-sidebar">
-    <div class="sidebar-content js-simplebar">
+    <div class="sidebar-content" style="height: 100vh; overflow-y: auto; overflow-x: hidden;">
         <a class="sidebar-brand" href="{% url 'home' %}">
             <img src="{% static "template/img/logos/ISOLOGO.png" %}" class="avatar img-fluid rounded me-1" alt="Logo" style="width: 300px; height: auto; ">
         </a>
